tests/checker/fail/unknown_method.can
main = () => Unit {
    5
        .bogus()
        .print()
}
